--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,6 +5,7 @@
   "main": "lib/index.js",
   "module": "src/index.js",
   "scripts": {
+    "lint": "eslint src",
     "build": "babel src -d lib"
   },
   "keywords": [
@@ -19,6 +20,11 @@
   "devDependencies": {
     "@babel/cli": "^7.5.0",
     "@babel/core": "^7.5.4",
-    "@babel/preset-env": "^7.5.4"
+    "@babel/preset-env": "^7.5.4",
+    "eslint": "^6.0.1",
+    "eslint-config-airbnb-base": "^13.2.0"
+  },
+  "dependencies": {
+    "eslint-plugin-import": "^2.18.0"
   }
 }
