--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -8,6 +8,13 @@
     "lint": "eslint src",
     "build": "babel src -d bin"
   },
+  "bin": {
+    "semtex": "bin/cli.js"
+  },
+  "files": [
+    "src",
+    "bin"
+  ],
   "keywords": [
     "semtex",
     "html",
@@ -19,14 +26,14 @@
   "author": "Gary Doublé",
   "license": "ISC",
   "dependencies": {
-    "@semtexjs/core": "^0.0.0",
-    "eslint-plugin-import": "^2.18.0"
+    "@semtexjs/core": "^0.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0",
     "@babel/core": "^7.5.4",
     "@babel/preset-env": "^7.5.4",
     "eslint": "^6.0.1",
-    "eslint-config-airbnb-base": "^13.2.0"
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-import": "^2.18.0"
   }
 }
