--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,6 +8,10 @@
     "lint": "eslint src",
     "build": "babel src -d lib"
   },
+  "files": [
+    "src",
+    "lib"
+  ],
   "keywords": [
     "semtex",
     "html",
@@ -22,9 +26,7 @@
     "@babel/core": "^7.5.4",
     "@babel/preset-env": "^7.5.4",
     "eslint": "^6.0.1",
-    "eslint-config-airbnb-base": "^13.2.0"
-  },
-  "dependencies": {
+    "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.18.0"
   }
 }
