--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,5 +28,8 @@
     "eslint": "^6.0.1",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.18.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
