chore: added the config for conventional commits

--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,11 @@
 {
+  "version": "independent",
   "packages": [
     "packages/*"
   ],
-  "version": "independent"
+  "command": {
+    "publish": {
+      "conventionalCommits": true
+    }
+  }
 }
