chore: added scripts to clean, test, and run ci

--- a/lerna.json
+++ b/lerna.json
@@ -4,6 +4,9 @@
     "packages/*"
   ],
   "command": {
+    "version": {
+      "message": "chore(release): published %s"
+    },
     "publish": {
       "conventionalCommits": true
     }
