--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -5,8 +5,11 @@
   "main": "bin/cli.js",
   "module": "src/cli.js",
   "scripts": {
+    "clean": "rimraf bin",
     "lint": "eslint src",
-    "build": "babel src -d bin"
+    "build": "babel src -d bin",
+    "test": "echo \"no tests available\"",
+    "ci": "run-s clean lint build test"
   },
   "bin": {
     "semtex": "bin/cli.js"
@@ -34,7 +37,9 @@
     "@babel/preset-env": "^7.5.4",
     "eslint": "^6.0.1",
     "eslint-config-airbnb-base": "^13.2.0",
-    "eslint-plugin-import": "^2.18.0"
+    "eslint-plugin-import": "^2.18.0",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^2.6.3"
   },
   "publishConfig": {
     "access": "public"
