--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,8 +5,11 @@
   "main": "lib/index.js",
   "module": "src/index.js",
   "scripts": {
+    "clean": "rimraf lib",
     "lint": "eslint src",
-    "build": "babel src -d lib"
+    "build": "babel src -d lib",
+    "test": "echo \"no tests available\"",
+    "ci": "run-s clean lint build test"
   },
   "files": [
     "src",
@@ -27,7 +30,9 @@
     "@babel/preset-env": "^7.5.4",
     "eslint": "^6.0.1",
     "eslint-config-airbnb-base": "^13.2.0",
-    "eslint-plugin-import": "^2.18.0"
+    "eslint-plugin-import": "^2.18.0",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^2.6.3"
   },
   "publishConfig": {
     "access": "public"
